--- a/src/components/carousel/Carousel.module.scss
+++ b/src/components/carousel/Carousel.module.scss
@@ -1,13 +1,14 @@
 .carousel {
-    margin-top: 20svh;
+    margin: 20vh auto;
     position: relative;
     width: 100vw;
     height: 15rem;
-    padding: 0.5rem;
+    display: grid;
+    place-content: center;
     overflow: hidden;
 
     @media(min-width: 768px) {
-        margin: 0;
+        margin: 20vh auto;
         width: 75svw;
         height: 27rem;
     }
@@ -16,6 +17,7 @@
         position: absolute;
         left: 0;
         top: 0;
+        z-index: 100;
         padding: 0 1rem;
         width: 100%;
         height: 100%;
@@ -30,20 +32,26 @@
         height: 100%;
         display: flex;
         align-items: center;
+        justify-content: center;
 
         p {
-            position: relative;
+            position: absolute;
+            top: 1rem;
+            z-index: 10;
+            color: black;
+            font-weight: 600;
+            text-shadow: 1px 1px rgb(255, 255, 255);
         }
 
         div {
+            margin: 0 auto;
             width: 100%;
             height: 100%;
-            object-fit: cover;
-
+            object-position: top center;
             img {
-                margin: 0 auto;
                 &.show {
                     opacity: 1;
+                    z-index: -1;
                 }
                 &.hide{
                     opacity: 0;
