--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -1,7 +1,7 @@
+
+
 .modal {
-    height: fit-content;
-    padding: 2rem 2rem 4rem;
-    margin: auto; 
+    height: 100%;    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,9 +11,8 @@
  .glass {
    // glass effect
    box-sizing: border-box;
-   border: 2px solid rgba(0, 0, 0, .15);
    
-   box-shadow: 0 0 10px rgba(0, 0, 0, .25), inset 0 0 2px 0px white;
+   box-shadow: 0 0 10px rgba(0, 0, 0, .25), inset 0 0 2px 0px rgba(255, 255, 255, 0.13);
    background: rgba(0, 0, 0, .0125);
    overflow: hidden;
    backdrop-filter: blur(13px);
@@ -21,23 +20,29 @@
  }
  
  .close_btn {
+  margin-top: 1rem;
+  
    position: absolute;
    top: auto;
    bottom: 0;
+   z-index: 50;
    outline: none;
    border: none;
-   padding: 1rem 2rem;
+   padding: 0.75rem 1.5rem;
+   color: #282828;
    background-color: rgba(242, 242, 242, 0.872);
-   color: rgba(14, 14, 14, 0.952);
-   font-size: 2rem;
    filter: drop-shadow(0 4px 3px rgba(0,0,0,0.55));
-   box-shadow: inset -2px 2px 2px rgba(0,0,0,0.4);
-   z-index: 50;
+   box-shadow: inset -2px 2px 2px rgba(0,0,0,0.4);   
    transition: all 0.3s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+   margin: 0;   
+  font-size: clamp(1.2rem, 2vw, 2rem);
+  text-transform: uppercase;
+  text-decoration: none;
+  
 
    &:hover {    
-    color: white;
-   background-color: #888;
+    color: rgb(238, 238, 238);
+   background-color: #000000;
     cursor: pointer;
    }
    &:focus {
