--- a/src/pages/contact/Contact.module.scss
+++ b/src/pages/contact/Contact.module.scss
@@ -19,7 +19,7 @@
 
     
     .contact_form {
-        margin: 0 auto;
+        margin: 4rem auto;
         width: 80%;
         height: 600px;
         /* border: 1px solid #888; */
