--- a/src/components/backdrop/Backdrop.module.scss
+++ b/src/components/backdrop/Backdrop.module.scss
@@ -3,7 +3,7 @@
     top: 10vh;
     left: 50%;
     transform: translateX(-50%);
-    height: 80vh;
+    height: 90vh;
     width: 80vw;
     background: #000000e1;
     display: flex;
@@ -11,4 +11,5 @@
     align-self: center;
     justify-content: center;
     z-index: 99;
+    overflow: hidden;
 }
