--- a/src/components/locker/Locker.module.scss
+++ b/src/components/locker/Locker.module.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
     z-index: 10;
     width: 400px;
     height: 400px;
