--- a/src/components/sidescrollanimation/SideScroll.module.scss
+++ b/src/components/sidescrollanimation/SideScroll.module.scss
@@ -1,13 +1,15 @@
   
   .sidescroll {
     display: flex;
-    height: 100vh;
+    width: 100%;
+    height: 100svh;
     align-items: center;
+    justify-content: center;
     cursor: -webkit-grab;
   }
   
   .item {
-    font-size: 30vw;
+    font-size: clamp( 10rem, 30vw, 30rem);
     letter-spacing: -0.05em;
     padding-right: 0.25em;
     white-space: nowrap;
@@ -21,10 +23,3 @@
     cursor: grabbing;
   }
   
-  .bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-  }
