--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,6 +18,7 @@ html, body {
   overflow-x: hidden;
   background: $color-bg;
   color: $color-white;
+  scroll-behavior: smooth;
 }
  body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video{
   margin: 0;
