--- a/src/components/nav/NavItem.module.scss
+++ b/src/components/nav/NavItem.module.scss
@@ -16,7 +16,9 @@
   }
 
     &:last-of-type {
-        margin-right: 0.5rem;
+        margin-right: 1rem;
+        padding: 0;
+        border: 1px solid #888;
 
         @media screen and (min-width: 768px) {
             margin-right: 2rem;
@@ -25,7 +27,7 @@
 
     .nav_link {   
         margin: 0;
-        padding: 0.5rem 1rem 0.5rem 0.25rem;
+        /* padding: 0.5rem 1rem 0.5rem 0.25rem; */
         position: relative;
         width: 100%;
         height: 100%;   
