animating home button, changes to styling

--- a/src/components/nav/NavItem.module.scss
+++ b/src/components/nav/NavItem.module.scss
@@ -4,21 +4,20 @@
     height: unset;
     position: relative;
     padding: 1rem 2rem;
-    display: grid;
-    place-content: center;   
+    display: flex;
     text-transform: capitalize; 
 
     
   @media screen and (min-width: 768px) {
+    display: grid;
+    place-content: center;   
     height: 100%;
     width: 8rem;
     padding: 0 1rem;
   }
 
     &:last-of-type {
-        margin-right: 1rem;
-        padding: 0;
-        border: 1px solid #888;
+          
 
         @media screen and (min-width: 768px) {
             margin-right: 2rem;
@@ -35,7 +34,6 @@
         text-transform: uppercase;
         text-decoration: none;
         color: rgba(255, 255, 255, 0.768);
-
         
   @media screen and (min-width: 768px) {
     padding: 0.5rem 1rem;
