--- a/src/components/carousel/Carousel.module.scss
+++ b/src/components/carousel/Carousel.module.scss
@@ -1,16 +1,15 @@
 .carousel {
-    margin: 20vh auto;
+    margin: 0 auto;
     position: relative;
-    width: 100vw;
-    height: 15rem;
+    width: 90%;
+    height: 40vh;
     display: grid;
     place-content: center;
     overflow: hidden;
 
     @media(min-width: 768px) {
-        margin: 20vh auto;
-        width: 35svw;
-        height: 27rem;
+        margin: 0 auto;
+        width: 60%;
     }
 
     .buttons {
@@ -38,21 +37,16 @@
         align-items: center;
         justify-content: center;
 
-        p {
-            position: absolute;
-            top: 1rem;
-            z-index: 10;
-            color: black;
-            font-weight: 600;
-            text-shadow: 1px 1px rgb(255, 255, 255);
-        }
-
         div {
             margin: 0 auto;
             width: 100%;
             height: 100%;
-            object-position: top center;
+            
             img {
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                object-position: top center;
                 &.show {
                     opacity: 1;
                     z-index: -1;
