--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,4 +1,5 @@
 .header {
+    position: relative;
     width: 100%;
     height: 6vh;
     display: flex;
@@ -12,5 +13,28 @@
         z-index: 1;
         border-color: rgba(255,255,255, .2);
         border-width: .5px;
+      }
+        &>a {
+          position: relative;
+          left: 1rem;
+          z-index: 100;
+          text-decoration: none;
+          color: white;
+          font-size: 1.5rem;
+          height: 24px;
+          width: 24px;
+          display: grid;
+          place-content: center;
+
+          &>:hover {
+            cursor: pointer;
+        }
+
+        &>div {
+          position: absolute;
+          width: 24px;
+          height: 24px;
+          
+        }
       }
 }
