--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -36,3 +36,19 @@
     left: 66.6%;
   }
 
+
+
+  // video
+  .video {
+    margin: 1rem 0;
+    width: 90%;
+    height: 40vh;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 60%;
+    }
+}
