--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -15,7 +15,7 @@
         border-width: .5px;
       }
         &>a {
-          position: relative;
+          position: fixed;
           left: 1rem;
           z-index: 100;
           text-decoration: none;
