--- a/src/components/socials/Socials.module.scss
+++ b/src/components/socials/Socials.module.scss
@@ -1,14 +1,14 @@
  .socials {
-    margin: 2rem auto 0;
+    margin: 0 auto 0;
     width: fit-content;
     position: fixed;
     z-index: 99;
-    top: 14vh;
-    left: 1rem;
+    top: 0.75rem;
+    left: 25%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     -webkit-box-align: flex-start;
       -ms-flex-align: flex-start;
           align-items: flex-start;
@@ -17,8 +17,11 @@
 
             
   @media screen and (min-width: 768px) {
+    margin: 2rem auto 0;
     padding: 0 0 0 2rem;
     top: 40vh;
+    left: 0%;
+    flex-direction: column;
   }
 
  
