--- a/src/components/nav/NavItem.module.scss
+++ b/src/components/nav/NavItem.module.scss
@@ -15,9 +15,7 @@
     width: 8rem;
     padding: 0 1rem;
   }
-
-    &:last-of-type {
-          
+    &:last-of-type {          
 
         @media screen and (min-width: 768px) {
             margin-right: 2rem;
@@ -26,7 +24,7 @@
 
     .nav_link {   
         margin: 0;
-        /* padding: 0.5rem 1rem 0.5rem 0.25rem; */
+        padding: 0.5rem 1rem;
         position: relative;
         width: 100%;
         height: 100%;   
