--- a/src/components/carousel/Carousel.module.scss
+++ b/src/components/carousel/Carousel.module.scss
@@ -1,14 +1,14 @@
 .carousel {
-    margin: 0 auto;
+    margin: 10rem auto 5rem;
     position: relative;
     width: 90%;
-    height: 40vh;
+    height: 60vh;
     display: grid;
     place-content: center;
     overflow: hidden;
 
     @media(min-width: 768px) {
-        margin: 0 auto;
+        margin: 10rem auto;
         width: 60%;
     }
 
@@ -37,11 +37,18 @@
         align-items: center;
         justify-content: center;
 
+        &::-webkit-scrollbar {
+            display: none;
+          }
+
         div {
             margin: 0 auto;
             width: 100%;
             height: 100%;
-            
+            ::-webkit-scrollbar {
+                display: none;
+              }
+
             img {
                 width: 100%;
                 height: auto;
